Add starship initialization

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -13,4 +13,8 @@ autoload -Uz compinit
 compinit
 # End of lines added by compinstall
 
+# set default editor
 export EDITOR=nvim
+
+# use starship prompt
+eval "$(starship init zsh)"
