--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -19,6 +19,7 @@ export EDITOR=nvim
 # enable ls colors
 source <(dircolors -b)
 alias ls="ls --color=auto"
+alias l="ls -Alh"
 
 # use starship prompt
 eval "$(starship init zsh)"
