--- a/dot_config/sway/config.tmpl
+++ b/dot_config/sway/config.tmpl
@@ -7,8 +7,16 @@ set $up k
 set $right l
 
 set $term alacritty
-set $menu kickoff
+set $menu wmenu-run
 
+{{ if eq .env "home" -}}
+set $left-output "LG Electronics LG ULTRAGEAR 409NTEP7D556"
+set $middle-output "LG Electronics LG ULTRAGEAR 409NTTQ7E745"
+set $right-output "LG Electronics 27GL850 008NTYTN0434"
+output $left-output position 0 0 transform 270
+output $middle-output position 1440 755
+output $right-output position 4000 755
+{{- end }}
 
 input type:keyboard {
   xkb_layout "us"
@@ -21,6 +29,18 @@ input "7504:24868:Ultimate_Gadget_Laboratories_UHK_60_v2" {
   xkb_layout "us"
   xkb_variant "altgr-intl"
 }
+
+{{ if eq .env "home" -}}
+input "13159:6530:Endgame_Gear_XM2w_4k_v2_Wireless_Gaming_Mouse" {
+  accel_profile "flat"
+  pointer_accel -0.5
+}
+
+input "13159:6512:Endgame_Gear_Endgame_Gear_HS_Dongle" {
+  accel_profile "flat"
+  pointer_accel -0.5
+}
+{{- end }}
 
 bindsym $mod+Return exec $term
 bindsym $mod+Shift+q kill
@@ -53,33 +73,56 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# TODO: make this a template and configure workspace names (icons)
-# 1: Browser <firefox icon>
-# 4: Code <code icon>
-# 5: Discord <discord icon>
-# 10: KeePass <key icon>
+{{ if eq .env "home" -}}
+set $ws1 "1:"
+set $ws2 "2:"
+set $ws3 3
+set $ws4 "4: "
+set $ws5 "5:"
+set $ws6 6
+set $ws7 7
+set $ws8 8
+set $ws9 9
+set $ws10 "10:"
 
-bindsym $mod+1 workspace number 1
-bindsym $mod+2 workspace number 2
-bindsym $mod+3 workspace number 3
-bindsym $mod+4 workspace number 4
-bindsym $mod+5 workspace number 5
-bindsym $mod+6 workspace number 6
-bindsym $mod+7 workspace number 7
-bindsym $mod+8 workspace number 8
-bindsym $mod+9 workspace number 9
-bindsym $mod+0 workspace number 10
+workspace $ws1 output $middle-output
+workspace $ws2 output $right-output
+workspace $ws4 output $left-output
+workspace $ws10 output $middle-output
+{{- else }}
+set $ws1 "1:"
+set $ws2 2
+set $ws3 3
+set $ws4 "4: "
+set $ws5 "5:"
+set $ws6 6
+set $ws7 7
+set $ws8 8
+set $ws9 9
+set $ws10 "10:"
+{{- end }}
 
-bindsym $mod+Shift+1 move container to workspace number 1
-bindsym $mod+Shift+2 move container to workspace number 2
-bindsym $mod+Shift+3 move container to workspace number 3
-bindsym $mod+Shift+4 move container to workspace number 4
-bindsym $mod+Shift+5 move container to workspace number 5
-bindsym $mod+Shift+6 move container to workspace number 6
-bindsym $mod+Shift+7 move container to workspace number 7
-bindsym $mod+Shift+8 move container to workspace number 8
-bindsym $mod+Shift+9 move container to workspace number 9
-bindsym $mod+Shift+0 move container to workspace number 10
+bindsym $mod+1 workspace $ws1
+bindsym $mod+2 workspace $ws2
+bindsym $mod+3 workspace $ws3
+bindsym $mod+4 workspace $ws4
+bindsym $mod+5 workspace $ws5
+bindsym $mod+6 workspace $ws6
+bindsym $mod+7 workspace $ws7
+bindsym $mod+8 workspace $ws8
+bindsym $mod+9 workspace $ws9
+bindsym $mod+0 workspace $ws10
+
+bindsym $mod+Shift+1 move container to workspace $ws1
+bindsym $mod+Shift+2 move container to workspace $ws2
+bindsym $mod+Shift+3 move container to workspace $ws3
+bindsym $mod+Shift+4 move container to workspace $ws4
+bindsym $mod+Shift+5 move container to workspace $ws5
+bindsym $mod+Shift+6 move container to workspace $ws6
+bindsym $mod+Shift+7 move container to workspace $ws7
+bindsym $mod+Shift+8 move container to workspace $ws8
+bindsym $mod+Shift+9 move container to workspace $ws9
+bindsym $mod+Shift+0 move container to workspace $ws10
 
 bindsym $mod+b splith
 bindsym $mod+v splitv
